Fix tailwind installation and remove tailwind cdn

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mock RISA Assessment & Profiles by BudgetBrews</title>
-    <!-- Tailwind CSS CDN -->
-    <link href="/src/index.css" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/svg+xml" href="src/assets/react.svg" />
+    <link href="src/output.css" rel="stylesheet">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -94,7 +94,7 @@
         <!-- Powered by BudgetBrews -->
         <div class="text-center mb-10">
             <a href="https://www.facebook.com/budgetbrews" target="_blank" rel="noopener noreferrer" class="inline-flex items-center space-x-2 text-gray-600 hover:text-[--primary-color] transition duration-300">
-                <img src="http://googleusercontent.com/file_content/2" alt="BudgetBrews Logo" class="w-12 h-12 rounded-full shadow-sm">
+                <img src="src/assets/bb-logo.jpg" alt="BudgetBrews Logo" class="w-12 h-12 rounded-full shadow-sm">
                 <span class="text-lg font-semibold" data-lang-key="poweredBy">Powered by BudgetBrews</span>
             </a>
         </div>
